--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: USGSwsQWSR
 Type: Package
-Title: Surragate Regressions for Water Quality
+Title: Surrogate Regressions for Water Quality
 Version: 1.1.0
 Date: 2013-08-05
 Author: Laura DeCicco, Steve Corsi
