Added dataRetrieval...might be able to take that back out now that USGSwsBase if fixed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,13 +47,14 @@ Depends:
     R (>= 3.0),
     USGSwsQW,
     latticeExtra,
+    dataRetrieval,
     MASS
 Imports:
     quantreg
 Suggests:
     xtable,
-    dataRetrieval,
-    EGRET
+    EGRET,
+    knitr
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
