--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: USGSwsQWSR
 Type: Package
 Title: Surrogate Regressions for Water Quality
-Version: 1.1.0
-Date: 2013-08-05
+Version: 1.1.1
+Date: 2014-01-0
 Author: Laura DeCicco, Steve Corsi
 Maintainer: Laura DeCicco <ldecicco@usgs.gov>
-Description: Load modeling for GLRI monitering.
+Description: A collection of functions to simplify the process of surragate
+    regressions, specifically for censored data.
 License: file LICENSE
 Copyright: This software is in the public domain because it contains materials
     that originally came from the United States Geological Survey, an agency of
