Added makeQWObjects function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(generateParamChoices)
 export(getDecYear)
 export(getMultipleUV)
 export(getPredictVariables)
+export(makeQWObjects)
 export(mergeDatasets)
 export(plotQQTransforms)
 export(plotSteps)
