new build w/ example file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,35 @@ Suggests:
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
+Collate:
+    'GLRIRegression.R'
+    'analyzeSteps.R'
+    'createFormulaFromDF.R'
+    'createFullDT.R'
+    'createFullFormula.R'
+    'createModelEquation.R'
+    'externalStudentRes.R'
+    'findOutliers.R'
+    'generateParamChoices.R'
+    'getDecYear.R'
+    'getMultipleUV.R'
+    'getPredictionVariables.R'
+    'longDFResponse.R'
+    'makeQWObjects.R'
+    'mergeDatasets.R'
+    'plotQQTransforms.R'
+    'plotSteps.R'
+    'predictVariableScatterPlots.R'
+    'preditionPlot.R'
+    'prelimModelDev.R'
+    'rSqr.R'
+    'resultPlots.R'
+    'resultResidPlots.R'
+    'runFit.R'
+    'runPred.R'
+    'saveModelResults.R'
+    'simpleCap.R'
+    'summaryPrintout.R'
+    'view.R'
+    'whatQW.R'
+    'whatUVNew.R'
