--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: GSqwsr
 Type: Package
 Title: Surrogate Regressions for Water Quality
-Version: 1.1.1
-Date: 2014-10-06
+Version: 1.2.0
+Date: 2015-04-13
 Author: Laura DeCicco, Steve Corsi
 Maintainer: Laura DeCicco <ldecicco@usgs.gov>
 Description: A collection of functions to simplify the process of surragate
@@ -15,8 +15,8 @@ Copyright: This software is in the public domain because it contains materials
     http://www.usgs.gov/visual-id/credit_usgs.html#copyright
 Depends:
     R (>= 3.0),
-    USGSwsBase,
-    USGSwsQW,
+    smwrBase,
+    smwrQW,
     latticeExtra
 Imports:
     quantreg,
