--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,6 @@ export(whatQW)
 export(whatUVNew)
 import(MASS)
 import(dataRetrieval)
+importFrom(smwrBase,mergeNearest)
+importFrom(smwrQW,as.qw)
+importFrom(smwrQW,censReg)
