Switching over to smwr packages.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,14 @@ Copyright: This software is in the public domain because it contains materials
     http://www.usgs.gov/visual-id/credit_usgs.html#copyright
 Depends:
     R (>= 3.0),
-    smwrBase,
-    smwrQW,
-    latticeExtra
+    smwrQW
 Imports:
-    quantreg,
     MASS,
-    dataRetrieval
+    dataRetrieval,
+    smwrBase,
+    smwrStats,
+    lattice,
+    latticeExtra
 Suggests:
     xtable,
     EGRET,
