--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,12 @@ export(whatQW)
 export(whatUVNew)
 import(MASS)
 import(dataRetrieval)
+import(smwrQW)
+importFrom(lattice,panel.xyplot)
+importFrom(lattice,qqmath)
+importFrom(lattice,strip.custom)
+importFrom(lattice,xyplot)
+importFrom(latticeExtra,layer)
+importFrom(latticeExtra,panel.quantile)
 importFrom(smwrBase,mergeNearest)
-importFrom(smwrQW,as.qw)
-importFrom(smwrQW,censReg)
+importFrom(smwrStats,rmse)
