Getting checks to pass clean.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,14 +15,14 @@ Copyright: This software is in the public domain because it contains materials
     http://www.usgs.gov/visual-id/credit_usgs.html#copyright
 Depends:
     R (>= 3.0),
-    smwrQW
+    smwrQW,
+    lattice,
+    latticeExtra
 Imports:
     MASS,
     dataRetrieval,
     smwrBase,
-    smwrStats,
-    lattice,
-    latticeExtra
+    smwrStats
 Suggests:
     xtable,
     EGRET,
