--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,12 +31,8 @@ export(whatQW)
 export(whatUVNew)
 import(MASS)
 import(dataRetrieval)
+import(lattice)
+import(latticeExtra)
 import(smwrQW)
-importFrom(lattice,panel.xyplot)
-importFrom(lattice,qqmath)
-importFrom(lattice,strip.custom)
-importFrom(lattice,xyplot)
-importFrom(latticeExtra,layer)
-importFrom(latticeExtra,panel.quantile)
 importFrom(smwrBase,mergeNearest)
 importFrom(smwrStats,rmse)
